--- a/templates/clients.html
+++ b/templates/clients.html
@@ -53,8 +53,8 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="../index.html" class="brand-link">
-      <img src="{% static '/dist/img/photo2.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+    <a href="/Asosiy/bolim/" class="brand-link">
+      <img src="{% static '/dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">Online Ombor</span>
     </a>
 
@@ -62,12 +62,12 @@
     <div class="sidebar">
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img src="{% static '/dist/img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
-        </div>
-        <div class="info">
-          <a href="#" class="d-block">Felix</a>
-        </div>
+<!--        <div class="image">-->
+<!--          <img src="{% static '/dist/img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">-->
+<!--        </div>-->
+<!--        <div class="info">-->
+<!--          <a href="#" class="d-block">Felix</a>-->
+<!--        </div>-->
       </div>
 
       <!-- Sidebar Menu -->
