--- a/templates/stats.html
+++ b/templates/stats.html
@@ -56,7 +56,7 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="../index.html" class="brand-link">
+    <a href="/Asosiy/bolim/" class="brand-link">
       <img src="{% static '/dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">Online Ombor</span>
     </a>
@@ -65,12 +65,12 @@
     <div class="sidebar">
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img src="{% static '/dist/img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
-        </div>
-        <div class="info">
-          <a href="#" class="d-block">Felix</a>
-        </div>
+<!--        <div class="image">-->
+<!--          <img src="{% static '/dist/img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">-->
+<!--        </div>-->
+<!--        <div class="info">-->
+<!--          <a href="#" class="d-block">Felix</a>-->
+<!--        </div>-->
       </div>
 
       <!-- Sidebar Menu -->
@@ -160,7 +160,7 @@
                             <td>{{i.umumiy_summa}}</td>
                             <td>{{i.tolandi}}</td>
                             <td>{{i.nasiya}}</td>
-                            <td><a href="/Asosiy/mahsulot_update/{{i.id}}/"><button type="submit" class="btn btn-warning" data-toggle="modal">Tahrirlash</button></a></td>
+<!--                            <td><a href="/Asosiy/mahsulot_update/{{i.id}}/"><button type="submit" class="btn btn-warning" data-toggle="modal">Tahrirlash</button></a></td>-->
                             <td><a href="/Asosiy2/statistika_ochir/{{i.id}}/"><button type="submit" class="btn btn-danger" data-toggle="modal">O`chirish</button></a></td>
                         </tr>
                     {% endfor %}
